--- a/resources/github.css
+++ b/resources/github.css
@@ -1,22 +1,22 @@
 .hljs {
-    display: block !important;
-    overflow-x: auto !important;
-    padding: 0.5em !important;
-    color: #333 !important;
-    background: #f8f8f8 !important;
+    display: block;
+    overflow-x: auto;
+    padding: 0.5em;
+    color: #333;
+    background: #f8f8f8;
 }
 
 .hljs-comment,
 .hljs-quote {
-    color: #998 !important;
-    font-style: italic !important;
+    color: #998;
+    font-style: italic;
 }
 
 .hljs-keyword,
 .hljs-selector-tag,
 .hljs-subst {
-    color: #333 !important;
-    font-weight: bold !important;
+    color: #333;
+    font-weight: bold;
 }
 
 .hljs-number,
@@ -24,70 +24,70 @@
 .hljs-variable,
 .hljs-template-variable,
 .hljs-tag .hljs-attr {
-    color: #008080 !important;
+    color: #008080;
 }
 
 .hljs-string,
 .hljs-doctag {
-    color: #d14 !important;
+    color: #d14;
 }
 
 .hljs-title,
 .hljs-section,
 .hljs-selector-id {
-    color: #900 !important;
-    font-weight: bold !important;
+    color: #900;
+    font-weight: bold;
 }
 
 .hljs-subst {
-    font-weight: normal !important;
+    font-weight: normal;
 }
 
 .hljs-type,
 .hljs-class .hljs-title {
-    color: #458 !important;
-    font-weight: bold !important;
+    color: #458;
+    font-weight: bold;
 }
 
 .hljs-tag,
 .hljs-name,
 .hljs-attribute {
-    color: #000080 !important;
-    font-weight: normal !important;
+    color: #000080;
+    font-weight: normal;
 }
 
 .hljs-regexp,
 .hljs-link {
-    color: #009926 !important;
+    color: #009926;
 }
 
 .hljs-symbol,
 .hljs-bullet {
-    color: #990073 !important;
+    color: #990073;
 }
 
 .hljs-built_in,
 .hljs-builtin-name {
-    color: #0086b3 !important;
+    color: #0086b3;
 }
 
 .hljs-meta {
     color: #999;
-    font-weight: bold !important;
+    font-weight: bold;
 }
 
 .hljs-deletion {
-    background: #fdd !important;
+    background: #fdd;
 }
 
 .hljs-addition {
-    background: #dfd !important;
+    background: #dfd;
 }
 
 .hljs-emphasis {
-    font-style: italic !important;
+    font-style: italic;
 }
 
 .hljs-strong {
-    font-weight: bold !important;
+    font-weight: bold;
 }
