--- a/resources/font-cjk-mono.css
+++ b/resources/font-cjk-mono.css
@@ -1,12 +1,12 @@
 @font-face {
     font-family: 'CJK MONO';
-    src: local('Noto Sans Mono CJK TC Regular'), local('Noto Sans Mono CJK JP Regular'), local('Noto Sans Mono CJK KR Regular'), local('Noto Sans Mono CJK HC Regular'), local('Noto Sans Mono CJK SC Regular'), local('Source Han Sans HW TC Regular'), local('Source Han Sans HW TW Regular'), local('Noto Sans Mono TC Regular'), url('https://cdn.jsdelivr.net/gh/magiclen/source-han-sans-hw-tc-woff2@2.0.1/SourceHanSansHWTC-Regular.woff2') format('woff2');
+    src: local("NotoSansMonoCJKTC-Regular"), local("SourceHanSansHWTC-Regular"), local("SourceHanSansHWTW-Regular"), local("NotoSansMonoCJKJP-Regular"), local("NotoSansMonoCJKKR-Regular"), local("NotoSansMonoCJKHK-Regular"), local("NotoSansMonoCJKSC-Regular"), url("https://cdn.jsdelivr.net/gh/magiclen/source-han-sans-hw-tc-woff2@2.004/SourceHanSansHWTC-Regular.woff2") format("woff2");
     font-display: swap
 }
 
 @font-face {
     font-family: 'CJK MONO';
     font-weight: bold;
-    src: local('Noto Sans Mono CJK TC Bold'), local('Noto Sans Mono CJK JP Bold'), local('Noto Sans Mono CJK KR Bold'), local('Noto Sans Mono CJK HC Bold'), local('Noto Sans Mono CJK SC Bold'), local('Source Han Sans HW TC Bold'), local('Source Han Sans HW TW Bold'), local('Noto Sans Mono TC Bold'), url('https://cdn.jsdelivr.net/gh/magiclen/source-han-sans-hw-tc-woff2@2.0.1/SourceHanSansHWTC-Bold.woff2') format('woff2');
+    src: local("NotoSansMonoCJKTC-Bold"), local("SourceHanSansHWTC-Bold"), local("SourceHanSansHWTW-Bold"), local("NotoSansMonoCJKJP-Bold"), local("NotoSansMonoCJKKR-Bold"), local("NotoSansMonoCJKHK-Bold"), local("NotoSansMonoCJKSC-Bold"), url($font_url + "SourceHanSansHWTC-Bold.woff2") format("woff2");
     font-display: swap
 }
