--- a/resources/font-cjk.css
+++ b/resources/font-cjk.css
@@ -1,12 +1,12 @@
 @font-face {
     font-family: 'CJK';
-    src: local('Noto Sans CJK TC Regular'), local('Noto Sans CJK JP Regular'), local('Noto Sans CJK KR Regular'), local('Noto Sans CJK HC Regular'), local('Noto Sans CJK SC Regular'), local('Source Han Sans TC Regular'), local('Source Han Sans TW Regular'), local('Noto Sans TC Regular'), url('https://cdn.jsdelivr.net/gh/magiclen/source-han-sans-tc-woff2@2.0.1/SourceHanSansTC-Regular.woff2') format('woff2');
+    src: local("NotoSansCJKTC-Regular"), local("SourceHanSansTC-Regular"), local("SourceHanSansTW-Regular"), local("NotoSansCJKJP-Regular"), local("NotoSansCJKKR-Regular"), local("NotoSansCJKHK-Regular"), local("NotoSansCJKSC-Regular"), url("https://cdn.jsdelivr.net/gh/magiclen/source-han-sans-tc-woff2@2.004/SourceHanSansTC-Regular.woff2") format("woff2");
     font-display: swap
 }
 
 @font-face {
     font-family: 'CJK';
     font-weight: bold;
-    src: local('Noto Sans CJK TC Bold'), local('Noto Sans CJK JP Bold'), local('Noto Sans CJK KR Bold'), local('Noto Sans CJK HC Bold'), local('Noto Sans CJK SC Bold'), local('Source Han Sans TC Bold'), local('Source Han Sans TW Bold'), local('Noto Sans TC Bold'), url('https://cdn.jsdelivr.net/gh/magiclen/source-han-sans-tc-woff2@2.0.1/SourceHanSansTC-Bold.woff2') format('woff2');
+    src: local("NotoSansCJKTC-Bold"), local("SourceHanSansTC-Bold"), local("SourceHanSansTW-Bold"), local("NotoSansCJKJP-Bold"), local("NotoSansCJKKR-Bold"), local("NotoSansCJKHK-Bold"), local("NotoSansCJKSC-Bold"), url("https://cdn.jsdelivr.net/gh/magiclen/source-han-sans-tc-woff2@2.004/SourceHanSansTC-Bold.woff2") format("woff2");
     font-display: swap
 }
